--- a/src/main/webapp/WEB-INF/jsp/common/SiteClient/footer.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/SiteClient/footer.jspf
@@ -1,10 +1,12 @@
- <footer class="ftco-footer ftco-bg-dark ftco-section">
+<footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Adventure</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <div class="ftco-footer-widget mb-6">
+              <h2 class="ftco-heading-2">SIÈGE SOCIAL ET INFORMATIONS JURIDIQUES</h2>
+              <p>Hay Mabouka , Marrakech 40000 Maroc.</p>
+              <p>Email : serviceclient@KechCasaAeroport.com </p>
+               <p>N° Autorisation de transport touristique: TT/12429-33/2020 </p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -12,41 +14,19 @@
               </ul>
             </div>
           </div>
+          
+         
           <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Information</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">About Us</a></li>
-                <li><a href="#" class="py-2 d-block">Online enquiry</a></li>
-                <li><a href="#" class="py-2 d-block">Call Us</a></li>
-                <li><a href="#" class="py-2 d-block">General enquiries</a></li>
-                <li><a href="#" class="py-2 d-block">Booking Conditions</a></li>
-                <li><a href="#" class="py-2 d-block">Privacy and Policy</a></li>
-                <li><a href="#" class="py-2 d-block">Refund policy</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Experience</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Beach</a></li>
-                <li><a href="#" class="py-2 d-block">Adventure</a></li>
-                <li><a href="#" class="py-2 d-block">Wildlife</a></li>
-                <li><a href="#" class="py-2 d-block">Honeymoon</a></li>
-                <li><a href="#" class="py-2 d-block">Nature</a></li>
-                <li><a href="#" class="py-2 d-block">Party</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            <div class="ftco-footer-widget mb-6">
+            	<h2 class="ftco-heading-2">AVEZ-VOUS DES QUESTIONS ?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Faculté de Science et Technique Marrakech</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+212 6 92 39 29 10</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@KechCasaAeroport.com</span></a></li>
+	           <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
+	             <li class="ftco-animate"><a href="#"><span class="icon-credit-card"></span></a> MasterCard - VISA </li> 
+	             </ul>
 	              </ul>
 	            </div>
             </div>
@@ -56,7 +36,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This WebSite is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">KechCasaAeroport Group</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
@@ -81,7 +61,7 @@
   <script src="SiteClient/js/aos.js"></script>
   <script src="SiteClient/js/jquery.animateNumber.min.js"></script>
   <script src="SiteClient/js/bootstrap-datepicker.js"></script>
-  <script src="SiteClient/js/jquery.timepicker.min.js"></script>
+  <script src="sSiteClient/js/jquery.timepicker.min.js"></script>
   <script src="SiteClient/js/scrollax.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="SiteClient/js/google-map.js"></script>
