--- a/src/main/webapp/WEB-INF/jsp/common/SiteClient/navigation.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/SiteClient/navigation.jspf
@@ -1,6 +1,6 @@
  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Casa-Kech Aeroport</a>
+	      <a class="navbar-brand" href="#">Casa-Kech Aeroport</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -8,13 +8,13 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	        
-	          <li class="nav-item"><a href="about.html" class="nav-link">Course vers aeroport</a></li>
-	          <li class="nav-item"><a href="service.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Listes véhicules</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Q/A & Contact</a></li>
-	   	      <li class="nav-item"><a href="hotel.html" class="nav-link">| </a></li>
-	          <li class="nav-item"><a href="hotel.html" class="nav-link"> Se connecter</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">S'inscrire</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">Course vers aeroport</a></li>
+	          <li class="nav-item"><a href="#serv" class="nav-link">Services</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">Listes véhicules</a></li>
+	          <li class="nav-item"><a href="#qanda" class="nav-link">Q/A & Contact</a></li>
+	   	      <li class="nav-item"><a href="#" class="nav-link">| </a></li>
+	          <li class="nav-item"><a href="#" class="nav-link"> Se connecter</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">S'inscrire</a></li>
 	          
 	        </ul>
 	      </div>
