--- a/src/main/webapp/WEB-INF/jsp/common/SiteClient/footer.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/SiteClient/footer.jspf
@@ -49,6 +49,7 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
+
   <script src="SiteClient/js/jquery.min.js"></script>
   <script src="SiteClient/js/jquery-migrate-3.0.1.min.js"></script>
   <script src="SiteClient/js/popper.min.js"></script>
@@ -63,7 +64,8 @@
   <script src="SiteClient/js/bootstrap-datepicker.js"></script>
   <script src="sSiteClient/js/jquery.timepicker.min.js"></script>
   <script src="SiteClient/js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyBaLZguszKUpzg8Y61UCG4fzAAM6d7UHXM"></script>
+
   <script src="SiteClient/js/google-map.js"></script>
   <script src="SiteClient/js/main.js"></script>
     
