--- a/src/main/webapp/WEB-INF/jsp/common/SiteClient/footer.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/SiteClient/footer.jspf
@@ -24,10 +24,12 @@
 	                <li><span class="icon icon-map-marker"></span><span class="text">Faculté de Science et Technique Marrakech</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+212 6 92 39 29 10</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@KechCasaAeroport.com</span></a></li>
+	                </ul>
 	           <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
+	           
 	             <li class="ftco-animate"><a href="#"><span class="icon-credit-card"></span></a> MasterCard - VISA </li> 
 	             </ul>
-	              </ul>
+	           
 	            </div>
             </div>
           </div>
@@ -48,10 +50,10 @@
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
 
-  
+
+  <script src="SiteClient/js/jquery.min.js"></script>
+  <script src="SiteClient/js/jquery-migrate-3.0.1.min.js"></script>
   <script src="SiteClient/js/popper.min.js"></script>
   <script src="SiteClient/js/bootstrap.min.js"></script>
   <script src="SiteClient/js/jquery.easing.1.3.js"></script>
@@ -63,113 +65,11 @@
   <script src="SiteClient/js/jquery.animateNumber.min.js"></script>
   <script src="SiteClient/js/bootstrap-datepicker.js"></script>
   <script src="SiteClient/js/scrollax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZZ2yty751gyOhjXHBUo99oBEA20cL04I" ></script>
+
   <script src="SiteClient/js/main.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
-    <script type="text/javascript">
- $(document).ready(function(){
+    
 
-  var mapOptions = {
-       zoom: 10,
-       mapTypeId: google.maps.MapTypeId.ROADMAP,
-       center: new google.maps.LatLng(41.06000,28.98700)
-     };
-
-  var map = new google.maps.Map(document.getElementById("map"),mapOptions);
-
-  var geocoder = new google.maps.Geocoder();  
-
-     $(function() {
-         $("#searchbox").autocomplete({
-         
-           source: function(request, response) {
-
-          if (geocoder == null){
-           geocoder = new google.maps.Geocoder();
-          }
-             geocoder.geocode( {'address': request.term }, function(results, status) {
-               if (status == google.maps.GeocoderStatus.OK) {
-
-                  var searchLoc = results[0].geometry.location;
-               var lat = results[0].geometry.location.lat();
-                  var lng = results[0].geometry.location.lng();
-                  var latlng = new google.maps.LatLng(lat, lng);
-                  var bounds = results[0].geometry.bounds;
-
-                  geocoder.geocode({'latLng': latlng}, function(results1, status1) {
-                      if (status1 == google.maps.GeocoderStatus.OK) {
-                        if (results1[1]) {
-                         response($.map(results1, function(loc) {
-                        return {
-                            label  : loc.formatted_address,
-                            value  : loc.formatted_address,
-                            bounds   : loc.geometry.bounds
-                          }
-                        }));
-                        }
-                      }
-                    });
-            }
-              });
-           },
-           select: function(event,ui){
-      var pos = ui.item.position;
-      var lct = ui.item.locType;
-      var bounds = ui.item.bounds;
-
-      if (bounds){
-       map.fitBounds(bounds);
-      }
-           }
-         });
-     }); 
-     
-     $(function() {
-         $("#searchbox2").autocomplete({
-         
-           source: function(request, response) {
-
-          if (geocoder == null){
-           geocoder = new google.maps.Geocoder();
-          }
-             geocoder.geocode( {'address': request.term }, function(results, status) {
-               if (status == google.maps.GeocoderStatus.OK) {
-
-                  var searchLoc = results[0].geometry.location;
-               var lat = results[0].geometry.location.lat();
-                  var lng = results[0].geometry.location.lng();
-                  var latlng = new google.maps.LatLng(lat, lng);
-                  var bounds = results[0].geometry.bounds;
-
-                  geocoder.geocode({'latLng': latlng}, function(results1, status1) {
-                      if (status1 == google.maps.GeocoderStatus.OK) {
-                        if (results1[1]) {
-                         response($.map(results1, function(loc) {
-                        return {
-                            label  : loc.formatted_address,
-                            value  : loc.formatted_address,
-                            bounds   : loc.geometry.bounds
-                          }
-                        }));
-                        }
-                      }
-                    });
-            }
-              });
-           },
-           select: function(event,ui){
-      var pos = ui.item.position;
-      var lct = ui.item.locType;
-      var bounds = ui.item.bounds;
-
-      if (bounds){
-       map.fitBounds(bounds);
-      }
-           }
-         });
-     }); 
- });
-</script>
   </body>
 </html>
