--- a/src/main/webapp/WEB-INF/jsp/common/SiteClient/header.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/SiteClient/header.jspf
@@ -27,7 +27,8 @@
     <link rel="stylesheet" href="SiteClient/css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="SiteClient/css/jquery.timepicker.css">
 
-    
+     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>  
+ 
     <link rel="stylesheet" href="SiteClient/css/flaticon.css">
     <link rel="stylesheet" href="SiteClient/css/icomoon.css">
     <link rel="stylesheet" href="SiteClient/css/style.css">
